--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
         <!-- Header -->
         <header id="header">
-            <div class="logo">
-            <!--<span class="icon fa-gem"></span>-->    
-            <img src="images/foto_perfil.svg">
+            <div class="logo">   
+                <img src="images/foto_perfil.svg">
             </div>
             <div class="content">
                 <div class="inner">
@@ -133,10 +132,10 @@
                     </ul>
                 </form>
                 <ul class="icons">
-                    <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://twitter.com/Silvaaigorr" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/igor-silva-08b3291a7/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+                    <li><a href="https://www.instagram.com/igor.codes/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/igorrsilvaa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                 </ul>
             </article>
 
@@ -199,7 +198,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     <h4>Icons</h4>
                     <ul class="icons">
                         <li><a href="#" class="icon brands fa-twitter"> <span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
                         <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
