--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE HTML>
 <html class="no-js" lang="pt-br">
-
 <head>
     <meta charset="utf-8" />
     <title>Meu curriculo</title>
@@ -9,6 +8,8 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
+    <!--Icone da aba-->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon"/>
 </head>
 
 <body class="is-preload">
@@ -38,7 +39,6 @@
 
         <!-- Main -->
         <div id="main">
-
             <!-- Intro -->
             <article id="intro">
                 <h2 class="major">Intro</h2>
@@ -102,7 +102,8 @@
             <!-- Contact -->
             <article id="contact">
                 <h2 class="major">Contate-me</h2>
-                <form method="post" action="#">
+                <form action="https://formsubmit.co/igorrsilvaa920@gmail.com" method="post">
+                <input type="hidden" name="_captcha" value="false">    
                     <div class="fields">
                         <div class="field half">
                             <label for="name">Nome</label>
@@ -113,7 +114,6 @@
                             <input type="text" name="email" id="email" />
                         </div>
                         <div class="field">
-                            <form action="https://formsubmit.co/igorrsilvaa920@gmail.com" method="post">
                             <label for="message">Mensagem</label>
                             <textarea name="message" id="message" rows="4"></textarea>
                         </div>
