--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                         <li><input type="submit" value="Enviar mensagem" class="primary" /></li>
                         <li><input type="reset" value="Apagar" /></li>
                     </ul>
+                    <!--Retorna para a pagina inicial di SITE-->
+                    <input type="hidden" name="_next" value="https://cv-programer.netlify.app">
                 </form>
                 <ul class="icons">
                     <li><a href="https://twitter.com/Silvaaigorr" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
@@ -134,8 +136,7 @@
         <!-- Footer -->
         <footer id="footer">
            
-        </footer>   
-
+        </footer>
     </div>
 
     <!-- BG -->
@@ -149,5 +150,4 @@
     <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
